@@ -46,6 +46,8 @@ Version 1.5.10+svn:
  * WML Engine:
    * Fixed bug #13024: Conditional [allow_undo] not always working right
    * Map size is now hard-limited to 200 by 200
+   * attribute hidden in [side] allows to hide a side from status table,
+     it also can be changed by [modify_side] (FR #12814)
 
 Version 1.5.10:
  * Campaigns:
